Fix incorrect import, print exceptions